# virtcam

./: README.md  config.json  pyproject.toml  virtcam.service
virtcam/: __main__.py
